Populate supported browsers

--- a/OpenHere/Base.lproj/MainMenu.xib
+++ b/OpenHere/Base.lproj/MainMenu.xib
@@ -15,6 +15,7 @@
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="OpenHere" customModuleProvider="target">
             <connections>
+                <outlet property="browserPopUpButton" destination="fnp-qp-IFC" id="GOq-FF-zu6"/>
                 <outlet property="window" destination="QvC-M9-y7g" id="gIp-Ho-8D9"/>
             </connections>
         </customObject>
@@ -721,6 +722,26 @@
                             </subviews>
                         </view>
                     </box>
+                    <popUpButton verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fnp-qp-IFC">
+                        <rect key="frame" x="60" y="316" width="361" height="26"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                        <popUpButtonCell key="cell" type="push" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" id="0uN-xF-utQ">
+                            <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
+                            <font key="font" metaFont="menu"/>
+                            <menu key="menu" id="rAs-gk-bAd"/>
+                        </popUpButtonCell>
+                    </popUpButton>
+                    <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tCH-3O-z5h">
+                        <rect key="frame" x="119" y="271" width="243" height="32"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                        <buttonCell key="cell" type="push" title="Set OpenHere as Default Browser" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Ijx-Qh-4ow">
+                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                            <font key="font" metaFont="system"/>
+                        </buttonCell>
+                        <connections>
+                            <action selector="setDefaultBrowser:" target="Voe-Tx-rLC" id="A6d-9u-Buv"/>
+                        </connections>
+                    </button>
                 </subviews>
             </view>
         </window>
