Disable set default browser button when set

--- a/OpenHere/Base.lproj/MainMenu.xib
+++ b/OpenHere/Base.lproj/MainMenu.xib
@@ -16,6 +16,7 @@
         <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="OpenHere" customModuleProvider="target">
             <connections>
                 <outlet property="browserPopUpButton" destination="fnp-qp-IFC" id="GOq-FF-zu6"/>
+                <outlet property="setDefaultBrowserButton" destination="tCH-3O-z5h" id="slx-Fr-Otu"/>
                 <outlet property="window" destination="QvC-M9-y7g" id="gIp-Ho-8D9"/>
             </connections>
         </customObject>
