Add constraints to silence warnings

--- a/OpenHere/Resources/Base.lproj/MainMenu.xib
+++ b/OpenHere/Resources/Base.lproj/MainMenu.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="14113" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14113"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14460.31"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -693,14 +693,13 @@
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
             <rect key="contentRect" x="335" y="390" width="480" height="102"/>
-            <rect key="screenRect" x="0.0" y="0.0" width="3840" height="2138"/>
+            <rect key="screenRect" x="0.0" y="0.0" width="2560" height="1417"/>
             <view key="contentView" wantsLayer="YES" id="EiT-Mj-1SZ">
                 <rect key="frame" x="0.0" y="0.0" width="480" height="102"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <popUpButton verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fnp-qp-IFC">
-                        <rect key="frame" x="127" y="58" width="336" height="26"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                    <popUpButton verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="fnp-qp-IFC">
+                        <rect key="frame" x="127" y="58" width="336" height="25"/>
                         <popUpButtonCell key="cell" type="push" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" id="0uN-xF-utQ">
                             <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
                             <font key="font" metaFont="menu"/>
@@ -710,9 +709,8 @@
                             <action selector="browserPopUpButtonChangedWithButton:" target="Voe-Tx-rLC" id="xjL-aW-Igh"/>
                         </connections>
                     </popUpButton>
-                    <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tCH-3O-z5h">
+                    <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="tCH-3O-z5h">
                         <rect key="frame" x="123" y="13" width="343" height="32"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <buttonCell key="cell" type="push" title="Set OpenHere as Default Browser" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Ijx-Qh-4ow">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                             <font key="font" metaFont="system"/>
@@ -721,9 +719,8 @@
                             <action selector="setDefaultBrowser:" target="Voe-Tx-rLC" id="A6d-9u-Buv"/>
                         </connections>
                     </button>
-                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tTF-Jn-KfD">
+                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="tTF-Jn-KfD">
                         <rect key="frame" x="18" y="65" width="105" height="17"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Open Links with:" id="FgT-zi-0GD">
                             <font key="font" metaFont="system"/>
                             <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -731,6 +728,18 @@
                         </textFieldCell>
                     </textField>
                 </subviews>
+                <constraints>
+                    <constraint firstItem="tCH-3O-z5h" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="EiT-Mj-1SZ" secondAttribute="leading" constant="20" symbolic="YES" id="4mj-kF-qeW"/>
+                    <constraint firstItem="tCH-3O-z5h" firstAttribute="top" secondItem="fnp-qp-IFC" secondAttribute="bottom" constant="20" symbolic="YES" id="5nJ-I5-C6a"/>
+                    <constraint firstAttribute="trailing" secondItem="fnp-qp-IFC" secondAttribute="trailing" constant="20" symbolic="YES" id="7rq-Kj-sgW"/>
+                    <constraint firstAttribute="bottom" secondItem="tCH-3O-z5h" secondAttribute="bottom" constant="20" symbolic="YES" id="Jgr-PN-rNg"/>
+                    <constraint firstItem="fnp-qp-IFC" firstAttribute="top" secondItem="EiT-Mj-1SZ" secondAttribute="top" constant="20" symbolic="YES" id="R0y-pO-Jlu"/>
+                    <constraint firstItem="fnp-qp-IFC" firstAttribute="leading" secondItem="tTF-Jn-KfD" secondAttribute="trailing" constant="8" symbolic="YES" id="cxq-5A-Iqt"/>
+                    <constraint firstItem="tCH-3O-z5h" firstAttribute="width" secondItem="fnp-qp-IFC" secondAttribute="width" id="dL4-4O-bd5"/>
+                    <constraint firstItem="tTF-Jn-KfD" firstAttribute="leading" secondItem="EiT-Mj-1SZ" secondAttribute="leading" constant="20" symbolic="YES" id="dZf-1x-lVy"/>
+                    <constraint firstAttribute="trailing" secondItem="tCH-3O-z5h" secondAttribute="trailing" constant="20" symbolic="YES" id="jWf-98-0dW"/>
+                    <constraint firstItem="tTF-Jn-KfD" firstAttribute="top" secondItem="EiT-Mj-1SZ" secondAttribute="top" constant="20" symbolic="YES" id="otb-KM-77k"/>
+                </constraints>
             </view>
             <point key="canvasLocation" x="139" y="33"/>
         </window>
